# portagent

./: CHANGES  MD5SUM  Makefile.in  README  TODO  config.h.in  configure  configure.in  portagent.lsm  portagent.lsm.in
adm/: makepkg  version
etc/: portagent.conf.in
man/: portagent.8.in
src/: Makefile.in  bf.c  conf.c  misc.c  msg.c  net.c  portagent.c  portagent.h  portagent.h.in  title.c
